# pygamlab

./: Advances.py  Advances_just_test.py  Constants.py  Convertors.py  Convertos.py  Course2.py  Data_Analysis.py  Functions.py  Gamlab_Package_List_July2023.xlsx  LICENSE  README.md  __init__.py  constants.py  contributers_Course2.py  contributers_course1.py  contributors.md  course1.py  course3.py  course3_contributers.py  index.html  main.py  old_Constants.py  pyproject.toml
.github/workflows/: static.yml
V0/: LICENSE.txt  contributors.md
archives/V0/: Constants.py  Convertors.py  pyproject.toml
archives/V1/: README.md  (+4 more)
archives/V1.5/: Constants.py  Converters.py
doc/: about.html  citation.html  collaborate.html  documentation.html  examples.html  gam_st.html  gam_st_.html  generator_st.html  generator_st_.html  genindex.html  index.html  index_en.html  license.html  madules.html  main_indexxxx.html  modules.html  objects.inv  old_examples.html  old_modules.html  quickstart.html  quickstart_tutorial.html  quickstart_tutorial_fa.html  search.html  searchindex.js  source_Index.html
docs/: Intro_on_PyGamLab.html  PyGamLab.html  about.html  all_functions.html  constants.html  contributing.html  convertors.html  crypto_rain.html  dani12.html  dany5.html  data_analysis.html  functions.html  genindex.html  index.html  insta6.html  installation.html  license.html  modules.html  objects.inv  privacy_policy.html  py-modindex.html  quickstart.html  search.html  searchindex.js  tutorial.html
src/: Constants.py  Converters.py  Data_Analysis.py  Functions.py  __init__.py
(+253 files in other folders)
