
[project]
name = "testgamlab"
version = "0.1.0"
description = "A scientific Python library with constants, unit convertors, formulas, and data analysis tools."
authors = [
  { name="Ali Pilehvar Meibody", email="ai.2024.pilehvar@Gmail.com" }
]
readme = "README.md"
license = { text = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "scikit-learn"
]

